--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,7 +125,7 @@ exclude = [
   '^music_assistant/controllers/.*$',
   '^music_assistant/helpers/app_vars.py',
   '^music_assistant/helpers/webserver.py',
-  '^music_assistant/models/.*$',
+  '^music_assistant/models/player_provider.py',
   '^music_assistant/providers/apple_music/.*$',
   '^music_assistant/providers/bluesound/.*$',
   '^music_assistant/providers/chromecast/.*$',
