Introduce (stability/development) stage on providers (#2248)

--- a/music_assistant/providers/airplay/manifest.json
+++ b/music_assistant/providers/airplay/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "player",
   "domain": "airplay",
+  "stage": "stable",
   "name": "AirPlay",
   "description": "Support for players that support the AirPlay protocol.",
   "codeowners": ["@music-assistant"],
