--- a/music_assistant/providers/audible/manifest.json
+++ b/music_assistant/providers/audible/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "audible",
+  "stage": "stable",
   "name": "Audible",
   "description": "Audible provider",
   "codeowners": ["@ztripez"],
