--- a/music_assistant/providers/audiobookshelf/manifest.json
+++ b/music_assistant/providers/audiobookshelf/manifest.json
@@ -1,14 +1,11 @@
 {
   "type": "music",
   "domain": "audiobookshelf",
+  "stage": "stable",
   "name": "Audiobookshelf",
   "description": "Audiobookshelf (audiobookshelf.org) as audiobook and podcast provider",
-  "codeowners": [
-    "@fmunkes"
-  ],
-  "requirements": [
-    "aioaudiobookshelf==0.1.7"
-  ],
+  "codeowners": ["@fmunkes"],
+  "requirements": ["aioaudiobookshelf==0.1.7"],
   "documentation": "https://music-assistant.io/music-providers/audiobookshelf",
   "multi_instance": true
 }
