--- a/music_assistant/providers/builtin/manifest.json
+++ b/music_assistant/providers/builtin/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "builtin",
+  "stage": "stable",
   "name": "Music Assistant",
   "description": "Built-in/generic provider that handles generic urls and playlists.",
   "codeowners": ["@music-assistant"],
