--- a/music_assistant/providers/deezer/manifest.json
+++ b/music_assistant/providers/deezer/manifest.json
@@ -1,9 +1,10 @@
 {
   "type": "music",
   "domain": "deezer",
+  "stage": "stable",
   "name": "Deezer",
   "description": "Support for the Deezer streaming provider in Music Assistant.",
-  "codeowners": ["@arctixdev",  "@micha91"],
+  "codeowners": ["@arctixdev", "@micha91"],
   "documentation": "https://music-assistant.io/music-providers/deezer/",
   "requirements": ["deezer-python-async==0.3.0", "pycryptodome==3.23.0"],
   "multi_instance": true
