--- a/music_assistant/providers/filesystem_smb/manifest.json
+++ b/music_assistant/providers/filesystem_smb/manifest.json
@@ -1,11 +1,12 @@
 {
-    "type": "music",
-    "domain": "filesystem_smb",
-    "name": "Filesystem (remote share)",
-    "description": "Support for music files that are present on remote SMB/CIFS.",
-    "codeowners": ["@music-assistant"],
-    "requirements": [],
-    "documentation": "https://music-assistant.io/music-providers/filesystem/",
-    "multi_instance": true,
-    "icon": "network"
-  }
+  "type": "music",
+  "domain": "filesystem_smb",
+  "stage": "stable",
+  "name": "Filesystem (remote share)",
+  "description": "Support for music files that are present on remote SMB/CIFS.",
+  "codeowners": ["@music-assistant"],
+  "requirements": [],
+  "documentation": "https://music-assistant.io/music-providers/filesystem/",
+  "multi_instance": true,
+  "icon": "network"
+}
