--- a/music_assistant/providers/hass/manifest.json
+++ b/music_assistant/providers/hass/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "plugin",
   "domain": "hass",
+  "stage": "stable",
   "name": "Home Assistant",
   "description": "Connect Music Assistant to Home Assistant.",
   "codeowners": ["@music-assistant"],
