--- a/music_assistant/providers/plex/manifest.json
+++ b/music_assistant/providers/plex/manifest.json
@@ -1,14 +1,11 @@
 {
   "type": "music",
   "domain": "plex",
+  "stage": "unmaintained",
   "name": "Plex Media Server Library",
   "description": "Support for the Plex streaming provider in Music Assistant.",
-  "codeowners": [
-    "@micha91"
-  ],
-  "requirements": [
-    "plexapi==4.17.0"
-  ],
+  "codeowners": ["@micha91"],
+  "requirements": ["plexapi==4.17.0"],
   "documentation": "https://music-assistant.io/music-providers/plex/",
   "multi_instance": true
 }
