--- a/music_assistant/providers/qobuz/manifest.json
+++ b/music_assistant/providers/qobuz/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "qobuz",
+  "stage": "stable",
   "name": "Qobuz",
   "description": "Qobuz support for Music Assistant: Lossless (and hi-res) Music provider.",
   "codeowners": ["@music-assistant"],
