--- a/music_assistant/providers/radiobrowser/manifest.json
+++ b/music_assistant/providers/radiobrowser/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "radiobrowser",
+  "stage": "stable",
   "name": "RadioBrowser",
   "description": "Search radio streams from RadioBrowser in Music Assistant.",
   "codeowners": ["@gieljnssns"],
