--- a/music_assistant/providers/sonos/manifest.json
+++ b/music_assistant/providers/sonos/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "player",
   "domain": "sonos",
+  "stage": "stable",
   "name": "SONOS",
   "description": "SONOS Player provider for Music Assistant.",
   "codeowners": ["@music-assistant"],
