--- a/music_assistant/providers/tunein/manifest.json
+++ b/music_assistant/providers/tunein/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "tunein",
+  "stage": "stable",
   "name": "Tune-In Radio",
   "description": "Play your favorite radio stations from Tune-In in Music Assistant.",
   "codeowners": ["@music-assistant"],
