--- a/music_assistant/providers/builtin_player/manifest.json
+++ b/music_assistant/providers/builtin_player/manifest.json
@@ -1,11 +1,10 @@
 {
   "type": "player",
   "domain": "builtin_player",
+  "stage": "alpha",
   "name": "Music Assistant",
   "description": "Support for playing to the Music Assistant Web Interface",
-  "codeowners": [
-    "@music-assistant"
-  ],
+  "codeowners": ["@music-assistant"],
   "documentation": "https://music-assistant.io/player-support/builtin/",
   "multi_instance": false,
   "builtin": true,
