--- a/music_assistant/providers/lastfm_scrobble/manifest.json
+++ b/music_assistant/providers/lastfm_scrobble/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "plugin",
   "domain": "lastfm_scrobble",
+  "stage": "beta",
   "name": "LastFM Scrobbler",
   "description": "Scrobble your music to Last.fm and others with a compatible API like Libre.fm",
   "codeowners": ["@music-assistant"],
