--- a/music_assistant/providers/soundcloud/manifest.json
+++ b/music_assistant/providers/soundcloud/manifest.json
@@ -1,6 +1,7 @@
 {
   "type": "music",
   "domain": "soundcloud",
+  "stage": "stable",
   "name": "Soundcloud",
   "description": "Support for the Soundcloud streaming provider in Music Assistant.",
   "codeowners": ["@domanchi", "@gieljnssns"],
