--- a/music_assistant/providers/ytmusic/manifest.json
+++ b/music_assistant/providers/ytmusic/manifest.json
@@ -7,9 +7,7 @@
   "codeowners": ["@MarvinSchenkel"],
   "requirements": [
     "ytmusicapi==1.10.3",
-    "yt-dlp==2025.6.30",
-    "duration-parser==1.0.1",
-    "bgutil-ytdlp-pot-provider==1.1.0"
+    "duration-parser==1.0.1"
   ],
   "documentation": "https://music-assistant.io/music-providers/youtube-music/",
   "multi_instance": true
