--- a/music_assistant/providers/bluesound/manifest.json
+++ b/music_assistant/providers/bluesound/manifest.json
@@ -7,5 +7,5 @@
   "codeowners": ["@cyanogenbot"],
   "requirements": ["pyblu==2.0.1"],
   "documentation": "https://music-assistant.io/player-support/bluesound/",
-  "mdns_discovery": ["_musc._tcp.local."]
+  "mdns_discovery": ["_musc._tcp.local.","_musp._tcp.local."]
 }
