--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "shortuuid==1.0.13",
   "zeroconf==0.147.2",
   "uv>=0.8.0",
+  "gql[all]==4.0.0",
 ]
 description = "Music Assistant"
 license = {text = "Apache-2.0"}
