--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -3,8 +3,8 @@ name: Release Drafter
 on:
   push:
     branches:
-      - stable
       - dev
+  workflow_dispatch:
 
 jobs:
   update_release_draft:
