--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -49,6 +49,7 @@ python-fullykiosk==0.0.14
 python-slugify==8.0.4
 pywidevine==1.8.0
 radios==0.3.2
+rokuecp==0.19.5
 setuptools>=1.0.0
 shortuuid==1.0.13
 snapcast==2.3.7
