--- a/music_assistant/providers/alexa/manifest.json
+++ b/music_assistant/providers/alexa/manifest.json
@@ -3,7 +3,7 @@
   "type": "player",
   "domain": "alexa",
   "name": "Alexa",
-  "description": "Support Echo devices as players in Music Assistant.",
+  "description": "Stream to Amazon Alexa (Echo) devices.",
   "codeowners": ["@alams154"],
   "requirements": ["alexapy==1.29.8"],
   "documentation": "https://www.music-assistant.io/player-support/alexa/"
