--- a/music_assistant/providers/podcast-index/manifest.json
+++ b/music_assistant/providers/podcast-index/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "podcast-index",
   "name": "Podcast Index",
-  "description": "The Podcast Index is here to preserve, protect and extend the open, independent podcasting ecosystem",
+  "description": "Discover and play podcasts using the open Podcast Index.",
   "documentation": "https://music-assistant.io/music-providers/podcast-index/",
   "type": "music",
   "requirements": [],
