--- a/music_assistant/providers/snapcast/manifest.json
+++ b/music_assistant/providers/snapcast/manifest.json
@@ -3,7 +3,7 @@
   "domain": "snapcast",
   "stage": "stable",
   "name": "Snapcast",
-  "description": "Support for snapcast server and clients.",
+  "description": "Synchronize and play music across Snapcast clients (including web browsers and Android devices) on your network.",
   "codeowners": ["@SantiagoSotoC"],
   "requirements": [
     "snapcast==2.3.7",
