--- a/music_assistant/providers/ard_audiothek/manifest.json
+++ b/music_assistant/providers/ard_audiothek/manifest.json
@@ -2,7 +2,7 @@
   "type": "music",
   "domain": "ard_audiothek",
   "name": "ARD Audiothek",
-  "description": "ARD Audiothek Integration",
+  "description": "Stream radio shows, news, and podcasts from ARD’s Audiothek (Germany’s public broadcaster).",
   "codeowners": ["@jfeil"],
   "requirements": ["gql[all]==4.0.0"],
   "documentation": "https://music-assistant.io/music-providers/ard-audiothek/",
