--- a/music_assistant/providers/builtin/manifest.json
+++ b/music_assistant/providers/builtin/manifest.json
@@ -3,7 +3,7 @@
   "domain": "builtin",
   "stage": "stable",
   "name": "Music Assistant",
-  "description": "Built-in/generic provider that handles generic urls and playlists.",
+  "description": "Built-in/generic provider that handles generic URLs and playlists.",
   "codeowners": ["@music-assistant"],
   "requirements": [],
   "documentation": "https://music-assistant.io/music-providers/builtin/",
