--- a/music_assistant/providers/ibroadcast/manifest.json
+++ b/music_assistant/providers/ibroadcast/manifest.json
@@ -3,7 +3,7 @@
   "domain": "ibroadcast",
   "stage": "stable",
   "name": "iBroadcast",
-  "description": "Support for the iBroadcast streaming provider in Music Assistant.",
+  "description": "Stream your personal iBroadcast music collection from anywhere.",
   "codeowners": ["@robsonke"],
   "requirements": ["ibroadcastaio==0.4.0"],
   "documentation": "https://music-assistant.io/music-providers/ibroadcast/",
