--- a/music_assistant/providers/jellyfin/manifest.json
+++ b/music_assistant/providers/jellyfin/manifest.json
@@ -3,7 +3,7 @@
   "domain": "jellyfin",
   "stage": "stable",
   "name": "Jellyfin Media Server Library",
-  "description": "Support for the Jellyfin streaming provider in Music Assistant.",
+  "description": "Stream music from your self-hosted Jellyfin server.",
   "codeowners": ["@lokiberra", "@Jc2k"],
   "requirements": ["aiojellyfin==0.14.1"],
   "documentation": "https://music-assistant.io/music-providers/jellyfin/",
