--- a/music_assistant/providers/qobuz/manifest.json
+++ b/music_assistant/providers/qobuz/manifest.json
@@ -3,7 +3,7 @@
   "domain": "qobuz",
   "stage": "stable",
   "name": "Qobuz",
-  "description": "Qobuz support for Music Assistant: Lossless (and hi-res) Music provider.",
+  "description": "Stream high-resolution music from Qobuz’s catalogue — ideal for audiophiles.",
   "codeowners": ["@music-assistant"],
   "requirements": [],
   "documentation": "https://music-assistant.io/music-providers/qobuz/",
