--- a/music_assistant/providers/sonos_s1/manifest.json
+++ b/music_assistant/providers/sonos_s1/manifest.json
@@ -3,7 +3,7 @@
   "domain": "sonos_s1",
   "stage": "stable",
   "name": "SONOS S1",
-  "description": "SONOS Player provider for Music Assistant for the S1 hardware, based on the Soco library. Select this provider if you have Sonos devices on the S1 operating system (with the S1 Controller app)",
+  "description": "Play music, manage groups, and control Series 1 SONOS speakers throughout your home. Select this provider if you have SONOS devices on the S1 operating system (with the S1 Controller app)",
   "codeowners": ["@music-assistant"],
   "requirements": ["soco==0.30.12", "defusedxml==0.7.1"],
   "documentation": "https://music-assistant.io/player-support/sonos/",
