--- a/music_assistant/providers/spotify/manifest.json
+++ b/music_assistant/providers/spotify/manifest.json
@@ -3,7 +3,7 @@
   "domain": "spotify",
   "stage": "stable",
   "name": "Spotify",
-  "description": "Support for the Spotify streaming provider in Music Assistant.",
+  "description": "Stream music, playlists, podcasts, and discover new songs via Spotify’s ecosystem.",
   "codeowners": ["@music-assistant"],
   "requirements": ["pkce==1.0.3"],
   "documentation": "https://music-assistant.io/music-providers/spotify/",
