--- a/music_assistant/providers/squeezelite/manifest.json
+++ b/music_assistant/providers/squeezelite/manifest.json
@@ -3,7 +3,7 @@
   "domain": "squeezelite",
   "stage": "stable",
   "name": "Squeezelite (slimproto players)",
-  "description": "Support for Squeezelite, a software-based player implementing the slimproto protocol, which was originally designed for the Squeezebox hardware players. Other players and/or original Squeezebox hardware might also work with this provider, but without any guarantees/support.",
+  "description": "Stream music to Squeezelite and some legacy Squeezebox players on your local network.",
   "codeowners": ["@music-assistant"],
   "requirements": ["aioslimproto==3.1.1"],
   "documentation": "https://music-assistant.io/player-support/squeezelite/",
