--- a/music_assistant/providers/tidal/manifest.json
+++ b/music_assistant/providers/tidal/manifest.json
@@ -3,7 +3,7 @@
   "domain": "tidal",
   "stage": "stable",
   "name": "Tidal",
-  "description": "Support for the Tidal streaming provider in Music Assistant.",
+  "description": "Stream music, playlists, and exclusives in lossless FLAC quality.",
   "codeowners": ["@jozefKruszynski"],
   "requirements": ["pkce==1.0.3"],
   "documentation": "https://music-assistant.io/music-providers/tidal/",
