--- a/music_assistant/providers/tunein/manifest.json
+++ b/music_assistant/providers/tunein/manifest.json
@@ -3,7 +3,7 @@
   "domain": "tunein",
   "stage": "stable",
   "name": "Tune-In Radio",
-  "description": "Play your favorite radio stations from Tune-In in Music Assistant.",
+  "description": "Listen to global radio stations, sports, and podcasts through TuneIn.",
   "codeowners": ["@music-assistant"],
   "requirements": [],
   "documentation": "https://music-assistant.io/music-providers/tunein/",
