--- a/music_assistant/providers/ytmusic/manifest.json
+++ b/music_assistant/providers/ytmusic/manifest.json
@@ -3,7 +3,7 @@
   "domain": "ytmusic",
   "stage": "experimental",
   "name": "YouTube Music",
-  "description": "Support for the YouTube Music streaming provider in Music Assistant.",
+  "description": "Stream songs and podcasts from YouTube Music.",
   "codeowners": ["@MarvinSchenkel"],
   "requirements": [
     "ytmusicapi==1.11.1",
